--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+    <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
