--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>com.g00fy2</groupId>
+            <artifactId>versioncompare</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>5.4.2</version>
