--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.gravitation1</groupId>
+            <artifactId>semanticversion</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
