fix: version compare

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
                     <name>aliyun maven</name>
                     <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
                 </repository>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub OWNER Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/gravitation1/semanticversion</url>
+                </repository>
             </repositories>
         </profile>
         <profile>
@@ -48,10 +53,21 @@
                     <name>mavenCentral</name>
                     <url>https://repo.maven.apache.org/maven2</url>
                 </repository>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub OWNER Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/gravitation1/semanticversion</url>
+                </repository>
             </repositories>
         </profile>
     </profiles>
     <dependencies>
+        <dependency>
+            <groupId>io.github.gravitation1</groupId>
+            <artifactId>semanticversion</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
@@ -71,9 +87,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.gravitation1</groupId>
-            <artifactId>semanticversion</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
